Login integrado front/back funcionando; falta ajustar JWT

--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ PG_PORT=5432
 PGADMIN_DEFAULT_EMAIL=admin@sedem.local
 PGADMIN_DEFAULT_PASSWORD=admin123
 PGADMIN_PORT=5050
+
+# (opcional) segredo do JWT para o Spring
+JWT_SECRET=uma_chave_bem_grande_e_imprevisivel_2025_xxx
