Chat bot adcionado

--- a/backend/api/src/main/resources/application.properties
+++ b/backend/api/src/main/resources/application.properties
@@ -24,3 +24,5 @@ jwt.expiration=3600000
 # PORTA DA APLICAÇÃO
 # ============================================
 server.port=8082
+
+gemini.api-key=gen-lang-client-0928136129
